Fix: On mobile infinite scrolling didn't work anymore
- listBody.js:755 doesn't trigger an event when scrolling

--- a/client/components/lists/list.styl
+++ b/client/components/lists/list.styl
@@ -180,6 +180,7 @@
     border-bottom: 1px solid darken(white, 20%)
 
   .list
+    display: contents
     flex-basis: auto
     width: 100%
     border-left: 0px
